2001-06-28  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new version of Automake.

2001-06-28  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout): Set history_name for export as well as
	checkout.
	(checkout_proc): Use it.

	* checkout.c (safe_location): Add missing argument in error message.

2001-06-26  Larry Jones  <larry.jones@sdrc.com>

	* recurse.c (start_recursion): Use strip_trailing_slashes instead
	of doing it by hand.

	* server.c (pserver_authenticate_connection): Don't clear out
	descrambled_password until *after* it's (potentially) logged.
	(Reported by Eric Hanchrow <offby1@blarg.net>.)

2001-06-25  Larry Jones  <larry.jones@sdrc.com>

	* recurse.c (start_recursion): Deal with at least some of the cases
	where trailing slashes cause confusion.
	(Reported by Malcolm Fernandes <fernande@redback.com>.)
	* sanity.sh (basica, basicb): Tweak existing tests to check this.

2001-06-22  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5): New tests with -d on command line.

2001-06-21  Larry Jones  <larry.jones@sdrc.com>

	* modules.c (do_module): Use run_module_prog and server_active to
	determine when to call server_prog instead of using server_expanding
	so that we get the right paths in the replies as long as we take
	mwhere into account in addition to where.
	(Reported by Pascal Bourguignon <pjb@informatimago.com>.)
	* server.c (server_prog): Use protocol pipe instead of buf_to_net.
	* sanity.sh (modules5): Remove FIXCVS comment and update to match.
	* server.c, server.h: Remove server_expanding since now unused.

2001-06-21  Larry Jones  <larry.jones@sdrc.com>
        for Stephen Rasku  <stephen@tgivan.com>

	* admin.c: Corrected spelling mistakes in help.

2001-06-20  Derek Price  <dprice@collab.net>

	* client.c (socket_buffer_shutdown): Fix untested typos.
	(Reported by "Jerzy Kaczorowski" <jerzyk@wndtabs.com>.)

	* buffer.c (stdio_buffer_shutdown): Put the call to SHUTDOWN_SERVER in
	the correct place.
